# 14.-automatic-design

./: pyproject.toml
app/: main.py
app/graphic_interfaces/: __init__.py  dialogs.py  user_interface.py
app/interfaces/: __init__.py
app/interfaces/controllers/: __init__.py  base.py  drawing_part_controller.py  project_controller.py  routing_controller.py  template_routing_controller.py  verification_controller.py
app/interfaces/menus/: __init__.py  main_menu.py
app/interfaces/signals/: __init__.py  signals.py
app/interfaces/views/: __init__.py  buttons_panel.py  dialogs.py  inputs.py  main_window.py  messages.py
app/interfaces/views/dialogs/: __init__.py  drawing_part_dialog.py  inputs.py  insert_routing_dialogs.py
app/resources/: __init__.py  strings.py  styles.py
app/services/: __init__.py  create_project.py
app/services/create_project/: create_project.py
app/services/drawing_part_management/: __init__.py
app/services/insert_template_routing/: __init__.py  files.py  insert.py
app/services/project_management/: __init__.py  create.py  errors.py  ui_helpers.py
app/services/sw_utils/: __init__.py  connection.py  errors.py  handler.py  helpers.py
app/services/template_routing_management/: __init__.py  files.py  insert.py  paste.py
app/services/verification_management/: __init__.py  create_excel.py  excel_utils.py  matches.py  project.py  sp.py  verification.py  verification_sp.py
