[project]
name = "automatic_design"
version = "0.1.0"
description = ""
authors = [
    {name = "VaDKo61",email = "vadkoo@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pywin32 (>=311,<312)",
    "pyside6 (>=6.9.2,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "thefuzz (>=0.22.1,<0.23.0)"
]

[tool.poetry]
packages = [{include = "14"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
